# devterm-web

./: README.md  pyproject.toml
devterm_web/: __init__.py  app.py
