[project]
name = "devterm-web"
version = "1.0.0"
description = "DevTerm Web - Web-based developer utilities"
authors = [{name = "DevTerm Team"}]
requires-python = ">=3.10"
dependencies = [
    "flask>=2.3.0",
    "pyyaml>=6.0",
    "toml>=0.10.2",
    "xmltodict>=0.13.0",
    "requests>=2.31.0",
    "cryptography>=41.0.0",
    "qrcode>=7.4.2",
    "markdown>=3.5.0",
]

[project.scripts]
devterm-web = "devterm_web.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["devterm_web*"]
